fixing dark mode button

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -221,7 +221,7 @@ body.dark-mode .masthead.top-bar {
 .masthead.top-bar a {
   color: $masthead-link-color !important; /* Force original link color */
   text-decoration: none;
-  font-size: 24px; /* Increase font size to 24px */
+  font-size: 22px; /* Adjust font size to 22px */
 }
 
 body.dark-mode .masthead.top-bar a {
